# llm-unify

./: .gitignore  .guix-channel  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  LICENSE  LICENSE-PALIMPSEST  LICENSE.txt  META.scm  README.adoc  README.md  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  guix.scm  justfile
.github/workflows/: codeql.yml  release.yml  rust.yml
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
crates/llm-unify-cli/: Cargo.toml
crates/llm-unify-cli/src/: main.rs
crates/llm-unify-parser/: Cargo.toml
crates/llm-unify-parser/src/: chatgpt.rs  claude.rs  copilot.rs  gemini.rs  lib.rs
crates/llm-unify-search/src/: search.rs
crates/llm-unify-storage/: Cargo.toml
crates/llm-unify-storage/src/: database.rs  lib.rs
crates/llm-unify-tui/src/: app.rs  lib.rs  ui.rs
